--- a/myAnimal-zoo/index.html
+++ b/myAnimal-zoo/index.html
@@ -8,7 +8,7 @@
 	<body>
 		<div id="page">
 			<div id="header">
-				<a href="#" id="logo"><img src="images/logo.jpg"</a>
+				<a href="#" id="logo"><img src="images/logo.jpg"></a>
 				 <ul>
 			        <li class="first">
 				        <h2><a href="live.html">Live</a></h2>
